syntax = "proto3";
package profile;

service Profile{
    rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoReply) {};
    rpc GetFans(GetFansRequest) returns (GetFansReply) {};
    rpc GetFollow(GetFollowRequest) returns (GetFollowReply) {};
    rpc AddFollow(AddFollowRequest) returns (AddFollowReply) {};
    rpc DeleteFollow(DeleteFollowRequest) returns (DeleteFollowReply) {};
}

message UserInfo {
    string Name = 1;
    bytes Pic = 2;
    int32 FansNum = 3;
    int32 FollowNum = 4;
    int32 MeipaiNum = 5;
}

message GetUserInfoRequest {
    string Uid = 1;
}
message GetUserInfoReply {
    int32 Status = 1;
    UserInfo Info = 2;
}

message GetFansRequest {
    string Uid = 1;
    int64 Index = 2;
}
message GetFansReply {
    int32 Status = 1;
    int64 Index = 2;
    repeated UserInfo Fanss = 3;
}

message AddFollowRequest {
    string Uid = 1;
    string DestUid = 2;
}
message AddFollowReply {
    int32 Status = 1;
}

message DeleteFollowRequest {
    string Uid = 1;
    string DestUid = 2;
}
message DeleteFollowReply {
    int32 Status = 1;
}

message GetFollowRequest {
    string Uid = 1;
    int64 Index = 2;
}
message GetFollowReply {
    int32 Status = 1;
    int64 Index = 2;
    repeated UserInfo Follows = 3;
}
